<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/zen_toolbar" />

    <LinearLayout
        android:id="@+id/linlaHeaderProgress"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:gravity="start|center"
            android:padding="2dp"
            android:text="@string/common_loading"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-condensed"
                android:maxLines="1"
                android:padding="11dp"
                android:text="@string/pet_creator_type_label"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="16sp"
                android:textStyle="bold" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spnPetTypes"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-condensed"
                android:maxLines="1"
                android:padding="11dp"
                android:text="@string/pet_creator_breed_label"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="16sp"
                android:textStyle="bold" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spnBreeds"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/inputPetName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:hint="@string/pet_creator_name_label"
                android:textColorHint="@android:color/secondary_text_light"
                app:hintTextAppearance="@style/TextLabel">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/edtPetName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:padding="11dp"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-condensed"
                android:maxLines="1"
                android:padding="11dp"
                android:text="@string/pet_creator_gender_label"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="16sp"
                android:textStyle="bold" />

            <co.ceryle.segmentedbutton.SegmentedButtonGroup
                android:id="@+id/groupGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                app:sbg_backgroundColor="@color/card_bg"
                app:sbg_dividerBackgroundDrawable="@android:drawable/divider_horizontal_bright"
                app:sbg_dividerPadding="10dp"
                app:sbg_dividerRadius="10dp"
                app:sbg_dividerSize="1dp"
                app:sbg_position="0"
                app:sbg_radius="2dp"
                app:sbg_ripple="false"
                app:sbg_selectorColor="@color/primary"
                app:sbg_selectorTextColor="?android:textColorPrimary">

                <co.ceryle.segmentedbutton.SegmentedButton
                    android:id="@+id/btnMale"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-light"
                    android:padding="4dp"
                    android:text="Male"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <co.ceryle.segmentedbutton.SegmentedButton
                    android:id="@+id/btnFemale"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-light"
                    android:padding="4dp"
                    android:text="Female"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </co.ceryle.segmentedbutton.SegmentedButtonGroup>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-condensed"
                android:maxLines="1"
                android:padding="11dp"
                android:text="@string/pet_creator_dob_label"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/txtPetDOB"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed"
                    android:maxLines="1"
                    android:padding="11dp"
                    android:textColor="@android:color/secondary_text_light"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <com.mikepenz.iconics.view.IconicsButton
                    android:id="@+id/btnDOBSelector"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:adjustViewBounds="true"
                    android:text="{faw-calendar}"
                    android:textColor="@color/primary"
                    android:textSize="20sp" />
            </LinearLayout>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:text="@string/pet_creator_image_picker_label"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="16sp"
                android:textStyle="bold" />

            <android.support.v7.widget.CardView
                style="@style/ZenPetsCards"
                android:layout_width="fill_parent"
                android:layout_height="220dp"
                android:layout_marginBottom="15dp"
                android:layout_marginEnd="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:padding="5dp">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/imgvwPetThumb"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="6dp"
                    android:adjustViewBounds="true"
                    android:scaleType="center"
                    android:src="@drawable/empty_camera" />
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>